-v- ---------------LSM v2.3 - 2024-xx------------------------------------------------------------------------------- -v-
-[Fixes]-
--Fixed iconData nil check for multi icon control

-[Additions]
--Accept a custom filter function via options.customFilterFunc


-v- ---------------LSM v2.21 - 2024-06-02---------------------------------------------------------------------------- -v-
-[Fixes]-
--Search/filter edtibox resets to empty if options.enableFilter == false


-v- ---------------LSM v2.2 - 2024-06-02---------------------------------------------------------------------------- -v-
-[Fixes]-
--Open and close clicks
--Context menus open & close, and other bugs
--Sizes
--Highlights
--Non clickable items
--MultiIcons
--Sounds
--Checkboxes
--Entry type determination
--Row's dataSource etc. updating
--Tooltips & custom tooltips
--API functions
--Callbacks (some callback parameters have changed!)
--Behavor of menus and contextmenus if ZO_Menu is used in addition
--Compatibility fix for LibCustomMenu submenus (which only used data.label as the name)

-[Changes]-
-Changed default sorting to "false" now. Enable it via options.sortEntries if you need it sorted by default

-[Additions]-
-Added new combobox header: Headline text, subline text, text search filter -> All optional, controled via the options table
-Added opened submenu highlight "breadcrumb" to show chain of opened submenus
-Added option maxDropdownHeight
-Added option useDefaultHighlightForSubmenuWithCallback
-Added: nil submenus create blank submenu -> no entries, borders look weird. An empty submenu {} creates a submenu with 1 "Empty" entry.
-Added SavedVariables (currently used for text filter header's "last 10 searched texts history")

-[Current callbacks]-
'NewStatusUpdated' = function(control, data)
'EntryOnMouseEnter' = function(control, data)
'EntryOnMouseExit' = function(control, data)
'EntryOnSelected' = function(control, data)
'OnMenuShow' = function(control)
'OnSubMenuShow' = function(control)